init notifications service and http endpoints
